--- a/book.tex
+++ b/book.tex
@@ -11,6 +11,7 @@
 \newcommand{\secref}[1]{Section~\ref{#1}}
 
 \newenvironment{callout}[2]{\begin{quotation}\textbf{Callout: {#1}}\label{#2}}{\end{quotation}}
+\newenvironment{checklist}[2]{\begin{quotation}\textbf{Checklist: {#1}}\label{#2}}{\end{quotation}}
 \newenvironment{challenge}[2]{\begin{quotation}\textbf{Challenge: {#1}}\label{#2}}{\end{quotation}}
 \newenvironment{discussion}[2]{\begin{quotation}\textbf{Discussion: {#1}}\label{#2}}{\end{quotation}}
 
