--- a/guide.tex
+++ b/guide.tex
@@ -7,8 +7,7 @@ See Atul Gawande's 2007 article
 Checklist}'' for a look at how using checklists can save lives (and make
 many other things better too).
 
-\begin{quote}
-\subsection{Scheduling the Event}\label{scheduling-the-event}
+\begin{checklist}{Scheduling the Event}{check:scheduling-the-event}
 
 \begin{enumerate}
 \item
@@ -33,8 +32,10 @@ many other things better too).
       part of partnership agreements.
     \end{itemize}
   \end{itemize}
+
 \item
   Arrange trainers.
+
 \item
   Arrange space.
 
@@ -42,6 +43,7 @@ many other things better too).
     \item
     Make sure there are breakout rooms for video recording.
   \end{itemize}
+
 \item
   Choose dates.
 
@@ -49,6 +51,7 @@ many other things better too).
     \item
     If it is in person, book travel.
   \end{itemize}
+
 \item
   Get names and email addresses of attendees from host(s).
 
@@ -57,10 +60,9 @@ many other things better too).
     Register those people in AMY. \{: .checklist\}
   \end{itemize}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
-\begin{quote}
-\subsection{Setting Up}\label{setting-up}
+\begin{checklist}{Setting Up}{check:setting-up}
 
 \begin{enumerate}
 \item
@@ -94,10 +96,9 @@ many other things better too).
     a description of any pre-requisite tasks \{: .checklist\}
   \end{itemize}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
-\begin{quote}
-\subsection{During the Event}\label{during-the-event}
+\begin{checklist}{During the Event}{check:during-the-event}
 
 \begin{enumerate}
 \item
@@ -116,10 +117,9 @@ many other things better too).
   Explain how we
   format lesson submissions. \{: .checklist\}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
-\begin{quote}
-\subsection{After the Event}\label{after-the-event}
+\begin{checklist}{After the Event}{check:after-the-event}
 
 \begin{enumerate}
 \item
@@ -162,11 +162,9 @@ many other things better too).
     Submit. \{: .checklist\}
   \end{enumerate}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
-\begin{quote}
-\subsection{Between Instructor Training
-Sessions}\label{between-instructor-training-sessions}
+\begin{checklist}{Between Instructor Training Sessions}{check:between-instructor-training-sessions}
 
 \begin{enumerate}
 \item
@@ -191,10 +189,9 @@ Sessions}\label{between-instructor-training-sessions}
     Submit. \{: .checklist\}
   \end{enumerate}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
-\begin{quote}
-\subsection{After Trainees Complete}\label{after-trainees-complete}
+\begin{checklist}{After Trainees Complete}{check:after-trainees-complete}
 
 \begin{enumerate}
 \item
@@ -219,7 +216,7 @@ Sessions}\label{between-instructor-training-sessions}
 \item
   Create and send PDF certificates. \{: .checklist\}
 \end{enumerate}
-\end{quote}
+\end{checklist}
 
 Note that trainers do not examine their own trainees: having them
 examine each other's helps balance load and maintain consistency of
