--- a/novice.tex
+++ b/novice.tex
@@ -246,8 +246,6 @@ c) 312
 d) 33
 \end{verbatim}
 
-\{: .source\}
-
 The correct answer is 42, but each of the other answers provides
 valuable insight.
 
@@ -265,7 +263,7 @@ What is the misconception associated with each wrong answer?
   column of numbers as unconnected to its neighbors.
 \item
   If she answers 33 then she knows she has to carry the 1, but is
-  carrying it back into the same column it came from. \{: .solution\}
+  carrying it back into the same column it came from.
 \end{itemize}
 \end{discussion}
 
