--- a/guide.tex
+++ b/guide.tex
@@ -1,4 +1,4 @@
-t\chaplbl{Teacher's Guide}{s:guide}
+t\chaplbl{Teacher's Guide}{sec:guide}
 
 \seclbl{Checklists}{sec:checklists}
 
@@ -557,7 +557,7 @@ is that every such failure reinforces the belief that computing is hard,
 and that they'd have a better chance of making next Thursday's
 conference submission deadline if they kept doing things the way they
 always have. For these reasons, we have adopted a ``teach most
-immediately useful first'' approach described in \secref{s:motivation}.
+immediately useful first'' approach described in \secref{sec:motivation}.
 
 \begin{callout}{Software Carpentry Is Not Computer Science}{callout:software-carpentry-is-not-computer-science}
 
@@ -748,7 +748,7 @@ part of a trainee's checkout procedure.
   Add pass/fail information for the trainees in AMY.
 \end{itemize}
 
-\seclbl{Terms}{sec:terms}
+\seclbl{Terminology}{sec:terminology}
 
 \begin{discussion}{Something to Think About}{disc:something-to-think-about}
 
