--- a/lessons.tex
+++ b/lessons.tex
@@ -1,4 +1,4 @@
-\chaplbl{Lessons}{s:lessons}
+\chaplbl{Lessons}{sec:lessons}
 
 So far, we've spent a lot of time talking about details of teaching and
 learning.
@@ -120,110 +120,74 @@ book
 Significant Learning Experiences}}. The table below compares them and
 shows some of the verbs typically used in learning objectives written
 for each level.
+(Reproduced with additions from \cite{bib:allen-tanner-2007}.)
 
-\begin{verbatim}
-<th>Bloom's taxonomy</th>
-<th>Facets of understanding (Wiggins & McTighe)</th>
-<th>Taxonomy of significant learning (Fisk)</th>
-<th>Typical learning objective verbs</th>
-\end{verbatim}
+\begin{tabular}{p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}}
 
-\begin{verbatim}
-<td>
-  <strong>Knowledge</strong>: recalling learned information
-</td>
-<td>
-  <strong>Explain</strong>: provide sophisticated and apt explanations and theories that provide knowledgeable and justified accounts of phenomena, facts, and data
-</td>
-<td>
-  <strong>Foundational knowledge</strong>: the facts, terms, formulas, concepts, principles, etc. that one understands and remembers
-</td>
-<td>
-  name, define, recall
-</td>
-\end{verbatim}
+Bloom's taxonomy
+&
+Facets of understanding (Wiggins \& McTighe)
+&
+Taxonomy of significant learning (Fisk)
+&
+Typical learning objective verbs
+\\
 
-\begin{verbatim}
-<td>
-  <strong>Comprehension</strong>: explaining the meaning of information
-</td>
-<td>
-  <strong>Interpret</strong>: interpretations, narratives, and translations that provide meaning; make subjects personal or accessible through images, anecdotes, analogies, and models
-</td>
-<td>
-  <strong>Application</strong>: using critical, creative, and practical (decision-making, problem-solving) skills
-</td>
-<td>
-  restate, locate, explain, recognize
-</td>
-\end{verbatim}
+\textbf{Knowledge}: recalling learned information
+&
+\textbf{Explain}: provide sophisticated and apt explanations and theories that provide knowledgeable and justified accounts of phenomena, facts, and data
+&
+\textbf{Foundational knowledge}: the facts, terms, formulas, concepts, principles, etc. that one understands and remembers
+&
+name, define, recall
+\\
 
-\begin{verbatim}
-<td>
-  <strong>Application</strong>: applying what one knows to novel, concrete situations
-</td>
-<td>
-  <strong>Apply</strong>: ability to use and adapt what one knows to new situations and in various contexts
-</td>
-<td>
-  <strong>Integration</strong>: making connections among ideas, subjects, and people
-</td>
-<td>
-  apply, demonstrate, use
-</td>
-\end{verbatim}
+\textbf{Comprehension}: explaining the meaning of information
+&
+\textbf{Interpret}: interpretations, narratives, and translations that provide meaning; make subjects personal or accessible through images, anecdotes, analogies, and models
+&
+\textbf{Application}: using critical, creative, and practical (decision-making, problem-solving) skills
+&
+restate, locate, explain, recognize
+\\
 
-\begin{verbatim}
-<td>
-  <strong>Analysis</strong>: breaking down a whole into its component parts and explaining how each part contributes to the whole
-</td>
-<td>
-  <strong>Have perspective</strong>: critical and insightful points of view; see the big picture
-</td>
-<td>
-  <strong>Human dimensions</strong>: learning about and changing one's self; interacting with others
-</td>
-<td>
-  differentiate, criticize, compare
-</td>
-\end{verbatim}
+\textbf{Application}: applying what one knows to novel, concrete situations
+&
+\textbf{Apply}: ability to use and adapt what one knows to new situations and in various contexts
+&
+\textbf{Integration}: making connections among ideas, subjects, and people
+&
+apply, demonstrate, use
+\\
 
-\begin{verbatim}
-<td>
-  <strong>Synthesis</strong>: assembling components to form a new and integrated whole
-</td>
-<td>
-  <strong>Empathize</strong>: ability to get inside another's feelings and perspectives; use prior indirect experience to perceive sensitively
-</td>
-<td>
-  <strong>Caring</strong>: identifying and changing one's feelings, values, and interests
-</td>
-<td>
-  design, construct, organize
-</td>
-\end{verbatim}
+\textbf{Analysis}: breaking down a whole into its component parts and explaining how each part contributes to the whole
+&
+\textbf{Have perspective}: critical and insightful points of view; see the big picture
+&
+\textbf{Human dimensions}: learning about and changing one's self; interacting with others
+&
+differentiate, criticize, compare
+\\
 
-\begin{verbatim}
-<td>
-  <strong>Evaluation</strong>: using evidence to make judgments about the relative merits of ideas and materials
-</td>
-<td>
-  <strong>Have self-knowledge</strong>: perceive how one's patterns or thought and action shape and impede one's own understanding
-</td>
-<td>
-  <strong>Learning how to learn</strong>: becoming a better, self-directed learner; learning to ask and answer questions
-</td>
-<td>
-  choose, rate, select
-</td>
-\end{verbatim}
+\textbf{Synthesis}: assembling components to form a new and integrated whole
+&
+\textbf{Empathize}: ability to get inside another's feelings and perspectives; use prior indirect experience to perceive sensitively
+&
+\textbf{Caring}: identifying and changing one's feelings, values, and interests
+&
+design, construct, organize
+\\
 
-\begin{verbatim}
-<td colspan="3">
-  Reproduced with additions from <a href="http://www.lifescied.org/content/6/2/85.full">Allen and Tanner</a>'s
-  "Putting the Horse Back in Front of the Cart: Using Visions and Decisions about High-Quality Learning Experiences to Drive Course Design" (2007)
-</td>
-\end{verbatim}
+\textbf{Evaluation}: using evidence to make judgments about the relative merits of ideas and materials
+&
+\textbf{Have self-knowledge}: perceive how one's patterns or thought and action shape and impede one's own understanding
+&
+\textbf{Learning how to learn}: becoming a better, self-directed learner; learning to ask and answer questions
+&
+choose, rate, select
+\\
+
+\end{tabular}
 
 Here is an example of a successively-improved lesson objective:
 
