--- a/motivation.tex
+++ b/motivation.tex
@@ -1,4 +1,4 @@
-\chaplbl{Motivation and Demotivation}{s:motivation}
+\chaplbl{Motivation and Demotivation}{sec:motivation}
 
 In order for learners to step out into new and familiar terrain, they
 will need encouragement. This section discusses typical ways that
@@ -6,7 +6,7 @@ learners are motivated (and can be demotivated!) and describes ways that
 communities of practice can be welcoming (or threatening) to new
 members.
 
-\seclbl{Motivation}{sec:motivation}
+\seclbl{What Motivates People?}{sec:what-motivates-people}
 
 People learn best when they care about the topic and believe they can
 master it. This presents us with a problem because most scientists don't
