--- a/novice.tex
+++ b/novice.tex
@@ -1,4 +1,4 @@
-\chaplbl{Novices}{s:novice}
+\chaplbl{Novices}{sec:novice}
 
 We'll now get started with our first round of learning some theory, how
 it relates to Software and Data Carpentry, and putting that theory into
