--- a/terms.tex
+++ b/terms.tex
@@ -1,4 +1,4 @@
-\chaplbl{Terminology}{s:terms}
+\chaplbl{Terminology}{sec:terms}
 
 The following terms will support the discussions and activities in the
 rest of the training by giving us a common vocabulary to talk about
@@ -194,7 +194,7 @@ An excellent overview of research results in education and learning is
 Ambrose et al's
 \textit{How Learning Works} \cite{bib:ambrose-hlw} (which is also an excellent example of what secondary
 literature ought to look like).  Green's
-\textit{Building a Better Teacher} \cite{bib:greene-babt} is lighter but no less informative: it explores why
+\textit{Building a Better Teacher} \cite{bib:green-babt} is lighter but no less informative: it explores why
 educational reforms in the past 50 years have mostly missed the mark,
 and what we should be doing instead. The ultra-short summary
 Deans for Impact report \cite{bib:deans-for-impact} contains useful, practical insights, and is
