--- a/welcome.tex
+++ b/welcome.tex
@@ -1,4 +1,4 @@
-\chaplbl{Introductions}{s:intro}
+\chaplbl{Introductions}{sec:intro}
 
 \begin{quote}
 Introductions set the stage for learning.\\--- Tracy Teal, Executive
