--- a/practices.tex
+++ b/practices.tex
@@ -1,4 +1,4 @@
-\chaplbl{Teaching Practices}{s:practices}
+\chaplbl{Teaching Practices}{sec:practices}
 
 We regard teaching as a performance art, no different from drama, music,
 or athletics. And as in those fields, we have a collection of small tips
@@ -87,7 +87,7 @@ raise their hands because:
   the class is in.
 \end{itemize}
 \item[Minute cards.]
-As explained in \secref{FIXME},
+As explained in \secref{sec:performance},
 we also use sticky notes as minute cards: before each coffee or meal
 break, learners take a minute to write one positive thing on the green
 sticky note (e.g., one thing they've learned that they think will be
