--- a/book.tex
+++ b/book.tex
@@ -1,5 +1,7 @@
 \documentclass{book}
 
+\usepackage[letterpaper, total={5in,8in}]{geometry}
+
 \author{Greg Wilson}
 
 \newcommand{\includegraphics}[1]{\textbf{#1}}
