--- a/guide.tex
+++ b/guide.tex
@@ -762,7 +762,7 @@ ideas/techniques described later in the training?
 \begin{challenge}{Who Decides?}{chal:who-decides}
 
 In Littky and Grabelle's
-\textit{The Big Picture: Education is Everyone's Business} \cite{bib:littky-big-picture},
+\emph{The Big Picture: Education is Everyone's Business} \cite{bib:littky-big-picture},
 Kenneth Wesson wrote,
 ``If poor inner-city children consistently outscored children from
 wealthy suburban homes on standardized tests, is anyone naive enough to
