--- a/lessons.tex
+++ b/lessons.tex
@@ -193,21 +193,21 @@ Here is an example of a successively-improved lesson objective:
 
 \begin{itemize}
 \item
-  \textit{Learner will be given opportunities to learn good programming practices.}
+  \emph{Learner will be given opportunities to learn good programming practices.}
   \\
   Describes the lesson's content, not the attributes of successful students.
 \item
-  \textit{Learner will have a better appreciation for good programming practices.}
+  \emph{Learner will have a better appreciation for good programming practices.}
   \\
   Doesn't start with an active verb or define the level of learning,
   and the subject of learning has no context and is not specific.
 \item
-  \textit{Learner will understand principles of good programming.}
+  \emph{Learner will understand principles of good programming.}
   \\
   Starts with an active verb, but doesn't define the level of learning,
   and the subject of learning is still too vague for assessment.
 \item
-  \textit{Learner will write one-page data analysis scripts for research purposes using R Studio.}
+  \emph{Learner will write one-page data analysis scripts for research purposes using R Studio.}
   \\
   Starts with an active verb, defines the level of learning,
   and provides context to ensure that outcomes can be assessed.
