--- a/performance.tex
+++ b/performance.tex
@@ -13,7 +13,7 @@ Many people assume that teachers are born, not made. From politicians to
 researchers and teachers themselves, most reformers have designed
 systems to find and promote those who can teach and eliminate those who
 can't. As Elizabeth Green describes in
-\textit{Building a Better Teacher} \cite{bib:green-babt}, though,
+\emph{Building a Better Teacher} \cite{bib:green-babt}, though,
 that assumption is wrong, which is why
 educational reforms based on it have repeatedly failed.
 
