--- a/terms.tex
+++ b/terms.tex
@@ -121,7 +121,7 @@ with each other over the course of the next two days.
 \begin{itemize}
 \item
   Gelman and Nolan's
-  \textit{Teaching   Statistics: A Bag of Tricks} \cite{bib:gelman-nolan-stats-tricks}
+  \emph{Teaching   Statistics: A Bag of Tricks} \cite{bib:gelman-nolan-stats-tricks}
   is full of PCK for teaching introductory statistics.
 \item
   The \href{http://csteachingtips.org/}{CS Teaching Tips} site is
@@ -137,7 +137,7 @@ scheme} characterizes learners as visual, auditory, or kinesthetic
 according to whether they like to see things, hear things, or do things.
 This scheme is easy to understand, but as de Bruyckere and colleagues
 point out in
-\textit{Urban Myths About Learning and Education} \cite{bib:debruyckere-urban-myths},
+\emph{Urban Myths About Learning and Education} \cite{bib:debruyckere-urban-myths},
 it is almost certainly false.
 Unfortunately, that hasn't stopped a large number of companies from
 marketing products based on it to parents and school boards.
@@ -192,9 +192,9 @@ a service.
 
 An excellent overview of research results in education and learning is
 Ambrose et al's
-\textit{How Learning Works} \cite{bib:ambrose-hlw} (which is also an excellent example of what secondary
+\emph{How Learning Works} \cite{bib:ambrose-hlw} (which is also an excellent example of what secondary
 literature ought to look like).  Green's
-\textit{Building a Better Teacher} \cite{bib:green-babt} is lighter but no less informative: it explores why
+\emph{Building a Better Teacher} \cite{bib:green-babt} is lighter but no less informative: it explores why
 educational reforms in the past 50 years have mostly missed the mark,
 and what we should be doing instead. The ultra-short summary
 Deans for Impact report \cite{bib:deans-for-impact} contains useful, practical insights, and is
