Marking for later work

--- a/book.tex
+++ b/book.tex
@@ -4,7 +4,7 @@
 
 \author{Greg Wilson}
 
-\newcommand{\includegraphics}[1]{\textbf{#1}}
+\newcommand{\includegraphics}[1]{\textbf{#1}} % FIXME
 
 \newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
