--- a/welcome.tex
+++ b/welcome.tex
@@ -1,8 +1,9 @@
 \chaplbl{Introductions}{sec:intro}
 
 \begin{quote}
-Introductions set the stage for learning.\\--- Tracy Teal, Executive
-Director, Data Carpentry
+Introductions set the stage for learning.
+\\
+--- Tracy Teal, Executive Director, Data Carpentry
 \end{quote}
 
 \begin{challenge}{Favorite Class}{chal:favorite-class}
@@ -10,6 +11,7 @@ Director, Data Carpentry
 In the Etherpad, write down your name, the best class you ever took (or
 one class from your top ten, if you can't decide), and what made it so
 great.
+
 \end{challenge}
 
 Hello everyone, and welcome to the Data Carpentry and Software Carpentry
@@ -142,6 +144,7 @@ motivate the activities and how you communicate with the attendees.
     \item
       3
     \end{enumerate}
+
   \item
     ``Rate your experience with the R programming language.''
     \begin{enumerate}
@@ -154,6 +157,7 @@ motivate the activities and how you communicate with the attendees.
     \item
       expert
     \end{enumerate}
+
   \item
     ``What does the Unix command `cut' do?''
     \begin{enumerate}
