--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,8 @@
+@misc{bib:allen-tanner,
+  author = "FIXME",
+  title = "FIXME"
+}
+
 @misc{bib:ambrose-hlw,
   author = "FIXME",
   title = "FIXME"
