--- a/book.tex
+++ b/book.tex
@@ -1,10 +1,9 @@
 \documentclass{book}
 
 \usepackage[letterpaper, total={5in,8in}]{geometry}
+\usepackage{graphicx}
 
 \author{Greg Wilson}
-
-\newcommand{\includegraphics}[1]{\textbf{#1}} % FIXME
 
 \newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
