--- a/carpentries.tex
+++ b/carpentries.tex
@@ -80,7 +80,7 @@ development and use. Its workshops are:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/SWCvsDC.png}
+\includegraphics{fig/SWCvsDC.png}
 \caption{Software Carpentry and Data Carpentry Comparison}
 \end{figure}
 
