--- a/lessons.tex
+++ b/lessons.tex
@@ -120,7 +120,7 @@ book
 Significant Learning Experiences}}. The table below compares them and
 shows some of the verbs typically used in learning objectives written
 for each level.
-(Reproduced with additions from \cite{bib:allen-tanner-2007}.)
+(Reproduced with additions from \cite{bib:allen-tanner}.)
 
 \begin{tabular}{p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}}
 
