--- a/memory.tex
+++ b/memory.tex
@@ -151,7 +151,7 @@ The three key concepts used in this loop are:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/for-loop-concepts.png}
+\includegraphics{fig/for-loop-concepts.png}
 \caption{Key Concepts}
 \end{figure}
 
@@ -161,7 +161,7 @@ relationships, which are as important as the concepts themselves, are:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/for-loop-arcs.png}
+\includegraphics{fig/for-loop-arcs.png}
 \caption{Relationships}
 \end{figure}
 
@@ -172,7 +172,7 @@ true:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/for-loop-rec.png}
+\includegraphics{fig/for-loop-rec.png}
 \caption{Recommendations}
 \end{figure}
 
@@ -182,17 +182,17 @@ training course are listed below:
 
 \begin{itemize}
 \item
-  \href{../fig/array-math.png}{Array Math}
+  \href{fig/array-math.png}{Array Math}
 \item
-  \href{../fig/conditionals.png}{Conditionals}
+  \href{fig/conditionals.png}{Conditionals}
 \item
-  \href{../fig/create-destroy.png}{Creating and Destroying Files}
+  \href{fig/create-destroy.png}{Creating and Destroying Files}
 \item
-  \href{../fig/dict-set.png}{Sets and Dictionaries in Python}
+  \href{fig/dict-set.png}{Sets and Dictionaries in Python}
 \item
-  \href{../fig/io.png}{Input and Output}
+  \href{fig/io.png}{Input and Output}
 \item
-  \href{../fig/lists-loops.png}{Lists and Loops}
+  \href{fig/lists-loops.png}{Lists and Loops}
 \end{itemize}
 
 Most of these are larger than our recommended limit, but that's not
