--- a/motivation.tex
+++ b/motivation.tex
@@ -24,7 +24,7 @@ belong in this course.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/what-to-teach.png}
+\includegraphics{fig/what-to-teach.png}
 \caption{What to Teach}
 \end{figure}
 
