--- a/performance.tex
+++ b/performance.tex
@@ -244,7 +244,7 @@ feedback.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/deathbulge-jerk.jpg}
+\includegraphics{fig/deathbulge-jerk.jpg}
 \caption{Feedback Feelings}
 \end{figure}
 
