--- a/terms.tex
+++ b/terms.tex
@@ -96,7 +96,7 @@ The things teachers know can be divided into:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{../fig/pck.svg}
+\includegraphics{fig/pck.png}
 \caption{Pedagogical Content Knowledge}
 \end{figure}
 
