--- a/motivation.tex
+++ b/motivation.tex
@@ -22,11 +22,7 @@ immediately useful should be taught first; things in the opposite corner
 that are hard to learn and have little near-term application don't
 belong in this course.
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{fig/what-to-teach.png}
-\caption{What to Teach}
-\end{figure}
+\figlbl{fig/what-to-teach.png}{What to Teach}{fig:what-to-teach}
 
 \begin{callout}{Actual Time}{callout:actual-time}
 
