--- a/performance.tex
+++ b/performance.tex
@@ -242,11 +242,7 @@ trying to improve your teaching. It's good to know what you do well!
 Sometimes it can be hard to receive feedback, especially negative
 feedback.
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{fig/deathbulge-jerk.jpg}
-\caption{Feedback Feelings}
-\end{figure}
+\figlbl{fig/deathbulge-jerk.jpg}{Feedback Feelings}{fig:jerk}
 
 Feedback is most effective when the people involved can share ground
 rules and expectations. This is especially important when the instructor
