--- a/terms.tex
+++ b/terms.tex
@@ -94,11 +94,7 @@ The things teachers know can be divided into:
   expansion are most common.
 \end{itemize}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{fig/pck.png}
-\caption{Pedagogical Content Knowledge}
-\end{figure}
+\figlbl{fig/pck.png}{Pedagogical Content Knowledge}{fig:pck}
 
 This training course focuses on general pedagogical knowledge through
 the two major categories (educational psychology and instructional
