--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,4 @@
-\documentclass{book}
+\documentclass[11pt]{book}
 
 \usepackage[letterpaper, total={5in,8in}]{geometry}
 \usepackage{graphicx}
@@ -10,6 +10,8 @@
 \newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\seclbl}[2]{\section{#1}\label{#2}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
+
+\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\includegraphics[width={#1}]{#2}\label{#3}\caption{#4}\end{figure}}
 
 \newenvironment{callout}[2]{\begin{quotation}\textbf{Callout: {#1}}\label{#2}}{\end{quotation}}
 \newenvironment{checklist}[2]{\begin{quotation}\textbf{Checklist: {#1}}\label{#2}}{\end{quotation}}
