--- a/carpentries.tex
+++ b/carpentries.tex
@@ -78,11 +78,7 @@ development and use. Its workshops are:
   modular---each Software Carpentry lesson is standalone.
 \end{itemize}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{fig/SWCvsDC.png}
-\caption{Software Carpentry and Data Carpentry Comparison}
-\end{figure}
+\figlbl{fig/swc-vs-dc.png}{Software Carpentry and Data Carpentry Comparison}{fig:swc-vs-dc}
 
 \seclbl{Workshop Operations}{sec:workshop-operations}
 
