Reformatting and changing order

--- a/lessons.tex
+++ b/lessons.tex
@@ -124,13 +124,13 @@ for each level.
 
 \begin{tabular}{p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}}
 
-Bloom's taxonomy
+\textbf{Bloom's taxonomy}
 &
-Facets of understanding (Wiggins \& McTighe)
+\textbf{Facets of understanding (Wiggins \& McTighe)}
 &
-Taxonomy of significant learning (Fisk)
+\textbf{Taxonomy of significant learning (Fisk)}
 &
-Typical learning objective verbs
+\textbf{Typical learning objective verbs}
 \\
 
 \textbf{Knowledge}: recalling learned information
