--- a/book.tex
+++ b/book.tex
@@ -1,22 +1,52 @@
 \documentclass[11pt]{book}
 
-\usepackage[letterpaper, total={5in,8in}]{geometry}
+\usepackage{geometry}
+\usepackage{framed}
 \usepackage{graphicx}
 
+\usepackage[T1]{fontenc}
+\usepackage{tgtermes}    % body font
+\usepackage{inconsolata} % fixed width font
+\usepackage{tgheros}     % sans-serif font
+
 \author{Greg Wilson}
+
+\geometry{
+  paperwidth=18.91cm,
+  paperheight=24.589cm,
+  vmargin=1.9cm, % top and bottom margins
+  inner=1.9cm, % inside margin
+  outer=2.29cm, % outside margin
+  bindingoffset=0.89cm % gutter
+}
+
+\setcounter{tocdepth}{0}    % sets what level of header is shown in the TOC
+\setcounter{secnumdepth}{1} % sets what level of subsect. are numbered
+
+% FIXME: introduce labels
+\newenvironment{callout}[2]
+{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
+{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+
+\newenvironment{checklist}[2]
+{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
+{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+
+\newenvironment{challenge}[2]
+{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
+{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+
+\newenvironment{discussion}[2]
+{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
+{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+
+\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\includegraphics[width={#1}]{#2}\label{#3}\caption{#4}\end{figure}}
 
 \newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
 \newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\seclbl}[2]{\section{#1}\label{#2}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
-
-\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\includegraphics[width={#1}]{#2}\label{#3}\caption{#4}\end{figure}}
-
-\newenvironment{callout}[2]{\begin{quotation}\textbf{Callout: {#1}}\label{#2}}{\end{quotation}}
-\newenvironment{checklist}[2]{\begin{quotation}\textbf{Checklist: {#1}}\label{#2}}{\end{quotation}}
-\newenvironment{challenge}[2]{\begin{quotation}\textbf{Challenge: {#1}}\label{#2}}{\end{quotation}}
-\newenvironment{discussion}[2]{\begin{quotation}\textbf{Discussion: {#1}}\label{#2}}{\end{quotation}}
 
 \title{A Short Guide to Teaching}
 \date{}
@@ -27,20 +57,32 @@
 \tableofcontents
 
 \include{welcome}
+
+\part{Lessons}
+
 \include{novice}
 \include{terms}
-\include{performance}
 \include{memory}
 \include{load}
+\include{lessons}
+
+\part{Teaching}
+
+\include{performance}
 \include{live}
 \include{practices}
 \include{motivation}
-\include{lessons}
+
+\part{Community}
+
 \include{carpentries}
-\include{guide}
-\include{reference}
 
 \bibliographystyle{plain}
 \bibliography{book}
+
+\appendix
+
+\include{guide}
+\include{reference}
 
 \end{document}
