--- a/book.tex
+++ b/book.tex
@@ -23,22 +23,14 @@
 \setcounter{tocdepth}{0}    % sets what level of header is shown in the TOC
 \setcounter{secnumdepth}{1} % sets what level of subsect. are numbered
 
-% FIXME: introduce labels
-\newenvironment{callout}[2]
-{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
-{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+\newenvironment{boxedsection}[3]
+{\begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{{#1}: #2}}}}
+{\end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure}}
 
-\newenvironment{checklist}[2]
-{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
-{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
-
-\newenvironment{challenge}[2]
-{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
-{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
-
-\newenvironment{discussion}[2]
-{ \begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{#1}}} }
-{ \end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure} }
+\newenvironment{callout}[2]{\begin{boxedsection}{Callout}{#1}{#2} }{ \end{boxedsection}}
+\newenvironment{checklist}[2]{\begin{boxedsection}{Checklist}{#1}{#2} }{ \end{boxedsection}}
+\newenvironment{challenge}[2]{\begin{boxedsection}{Challenge}{#1}{#2} }{ \end{boxedsection}}
+\newenvironment{discussion}[2]{\begin{boxedsection}{Discussion}{#1}{#2} }{ \end{boxedsection}}
 
 \newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\includegraphics[width={#1}]{#2}\label{#3}\caption{#4}\end{figure}}
 
