Accent characters and page size

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,14 @@
-\documentclass[11pt]{book}
+\documentclass[11pt]{memoir}
+
+\setstocksize{9in}{6in}
+\settrimmedsize{\stockheight}{\stockwidth}{*}
+\settrims{0pt}{0pt}
+\setlxvchars
+\settypeblocksize{*}{\lxvchars}{1.618}
+\setlrmargins{*}{*}{1.618}
+\setulmargins{60pt}{*}{*}
+\setheaderspaces{*}{*}{1.618}
+\checkandfixthelayout
 
 \usepackage{geometry}
 \usepackage{framed}
