--- a/lessons.tex
+++ b/lessons.tex
@@ -41,18 +41,18 @@ problem they face, and how the course will help them. A learner profile
 for Software Carpentry might be:
 
 \begin{quote}
-João is an agricultural engineer doing his masters in soil physics. His
+Jo\~{a}o is an agricultural engineer doing his masters in soil physics. His
 programming experience is a first year programming course using C. He
 was never able to use this low-level programming into his activities,
 and never programmed after the first year.
 
 His work consists of evaluating physical properties of soil samples from
 different conditions. Some of the soil properties are measured by an
-automated device that sends logs in a text format to his machine. João
+automated device that sends logs in a text format to his machine. Jo\~{a}o
 has to open each file in Excel, crop the first and last quarters of
 points, and calculate an average.
 
-Software Carpentry will show João how to write shell scripts to count
+Software Carpentry will show Jo\~{a}o how to write shell scripts to count
 the lines and crop the right range for each file, and how to use R to
 read these files and calculate the required statistics. It will also
 show him how to put his programs and files under version control so that
