--- a/memory.tex
+++ b/memory.tex
@@ -293,7 +293,7 @@ Evolution has therefore given us a second system called
 \emph{short-term} or \emph{working memory}. It is much faster, but also
 much smaller: in 1956, Miller estimated that the average adult's working
 memory could hold
-\href{https://en.wikipedia.org/wiki/The\_Magical\_Number\_Seven,\_Plus\_or\_Minus\_Two}{7±2
+\href{https://en.wikipedia.org/wiki/The\_Magical\_Number\_Seven,\_Plus\_or\_Minus\_Two}{7$\pm$2
 items} for a few seconds before things started to drop out. This is why
 phone numbers are typically 7 or 8 digits long: back when phones had
 dials instead of keypads, that was the longest string of numbers most
@@ -322,7 +322,7 @@ manage larger problems, but can also mislead us if we mis-identify
 something, i.e., see it as something it isn't.
 \end{callout}
 
-7±2 is probably the most important number in programming. When someone
+7$\pm$2 is probably the most important number in programming. When someone
 is trying to write the next line of a program, or understand what's
 already there, she needs to keep a bunch of arbitrary facts straight in
 her head: what does this variable represent, what value does it
@@ -330,7 +330,7 @@ currently hold, etc. If the number of facts grows too large, her mental
 model of the program comes crashing down (something we have all
 experienced).
 
-7±2 is also the most important number in teaching. An instructor cannot
+7$\pm$2 is also the most important number in teaching. An instructor cannot
 push information directly into a learner's long-term memory. Instead,
 whatever she presents is first represented in the learner's short-term
 memory, and is only transferred to long-term memory after it has been
