Simplifying the framed boxes

--- a/book.tex
+++ b/book.tex
@@ -34,8 +34,8 @@
 \setcounter{secnumdepth}{1} % sets what level of subsect. are numbered
 
 \newenvironment{boxedsection}[3]
-{\begin{figure}[h!]\vspace{-0.7cm}\centering \rule[-.7cm]{12.82cm}{0.75pt} \begin{minipage}[t]{12.82cm}\begin{framed}\centerline{{\textbf{{#1}: #2}}}\vspace{\baselineskip}}
-{\end{framed}\end{minipage} \rule{12.82cm}{0.75pt} \end{figure}}
+{\begin{figure}[h!]\begin{framed}\centerline{{\textbf{{#1}: #2}}}\vspace{\baselineskip}}
+{\end{framed} \end{figure}}
 
 \newenvironment{callout}[2]{\begin{boxedsection}{Callout}{#1}{#2} }{ \end{boxedsection}}
 \newenvironment{checklist}[2]{\begin{boxedsection}{Checklist}{#1}{#2} }{ \end{boxedsection}}
