--- a/guide.tex
+++ b/guide.tex
@@ -824,67 +824,64 @@ discusses ways
 to get educational institutions to actually change what they teach.
 Their findings are summarized in this table:
 
-\begin{verbatim}
-<td><strong>Aspect&nbsp;of&nbsp;System<br/>to be Changed</strong></td>
-<td><strong>Intended Outcome</strong></td>
-<td></td>
-\end{verbatim}
+\begin{tabular}{lll}
 
-\begin{verbatim}
-<td><strong>Individuals</strong></td>
-<td><strong>Prescribed</strong></td>
-<td>
-  <strong>I. Disseminating: Curriculum &amp; Pedagogy</strong>
-  <br/>
+\textbf{Aspect of System to be Changed}
+&
+\textbf{Intended Outcome}
+&
+\\
+
+\textbf{Individuals}
+&
+\textbf{Prescribed}
+&
+  \textbf{I. Disseminating: Curriculum \& Pedagogy}
+  \newline
   Change Agent Role: tell/teach individuals about new teaching conceptions and/or practices and encourage their use.
-  <br/>
-  <em>Diffusion</em>
-  <br/>
-  <em>Implementation</em>
-</td>
-\end{verbatim}
+  \newline
+  \emph{Diffusion}
+  \newline
+  \emph{Implementation}
+\\
 
-\begin{verbatim}
-<td></td>
-<td><strong>Emergent</strong></td>
-<td>
-  <strong>II. Developing: Reflective Teachers</strong>
-  <br/>
+&
+\textbf{Emergent}
+&
+  \textbf{II. Developing: Reflective Teachers}
+  \newline
   Change Agent Role: encourage/support individuals to develop new teaching conceptions and/or practices.
-  <br/>
-  <em>Scholarly Teaching</em>
-  <br/>
-  <em>Faculty Learning Communities</em>
-</td>
-\end{verbatim}
+  \newline
+  \emph{Scholarly Teaching}
+  \newline
+  \emph{Faculty Learning Communities}
+\\
 
-\begin{verbatim}
-<td><strong>Environments<br/>and Structures</strong></td>
-<td><strong>Prescribed</strong></td>
-<td>
-  <strong>III. Enacting: Policy</strong>
-  <br/>
+\textbf{Environments and Structures}
+&
+\textbf{Prescribed}
+&
+  \textbf{III. Enacting: Policy}
+  \newline
   Change Agent Role: enact new environmental features that require/encourage new teaching conceptions and/or practices.
-  <br/>
-  <em>Quality Assurance</em>
-  <br/>
-  <em>Organizational Development</em>
-</td>
-\end{verbatim}
+  \newline
+  \emph{Quality Assurance}
+  \newline
+  \emph{Organizational Development}
+\\
 
-\begin{verbatim}
-<td></td>
-<td><strong>Emergent</strong></td>
-<td>
-  <strong>IV. Developing: Shared Vision</strong>
-  <br/>
+&
+\textbf{Emergent}
+&
+  \textbf{IV. Developing: Shared Vision}
+  \newline
   Change Agent Role: empower/support stakeholders to collectively develop new environmental features that encourage new teaching conceptions and/or practices.
-  <br/>
-  <em>Learning Organizations</em>
-  <br/>
-  <em>Complexity Leadership</em>
-</td>
-\end{verbatim}
+  \newline
+  \emph{Learning Organizations}
+  \newline
+  \emph{Complexity Leadership}
+\\
+\end{tabular}
 
 The eight italicized approaches are:
 
