Minor formatting stuff

--- a/book.bib
+++ b/book.bib
@@ -1,8 +1,3 @@
-@misc{bib:allen-tanner,
-  author = "FIXME",
-  title = "FIXME"
-}
-
 @misc{bib:ambrose-hlw,
   author = "FIXME",
   title = "FIXME"
@@ -41,6 +36,12 @@
 @misc{bib:fincher-warrens-questions,
   author = "FIXME",
   title = "FIXME"
+}
+
+@misc{bib:fink-csle,
+  author = "FIXME",
+  title = "Creating Significant Learning Experiences",
+  url = "http://www.amazon.com/Creating-Significant-Learning-Experiences-Integrated/dp/1118124251/"
 }
 
 @misc{bib:gawande-personal-best,
@@ -114,6 +115,11 @@
 }
 
 @misc{bib:stefik-summary,
+  author = "FIXME",
+  title = "FIXME"
+}
+
+@misc{bib:wiggins-mctighe,
   author = "FIXME",
   title = "FIXME"
 }
