--- a/carpentries.tex
+++ b/carpentries.tex
@@ -78,7 +78,7 @@ development and use. Its workshops are:
   modular---each Software Carpentry lesson is standalone.
 \end{itemize}
 
-\figlbl{fig/swc-vs-dc.png}{Software Carpentry and Data Carpentry Comparison}{fig:swc-vs-dc}
+\figlbl{Software Carpentry and Data Carpentry Comparison}{fig:swc-vs-dc}{fig/swc-vs-dc.png}
 
 \seclbl{Workshop Operations}{sec:workshop-operations}
 
