--- a/lessons.tex
+++ b/lessons.tex
@@ -114,104 +114,60 @@ hierarchical, measurable, stable, and cross-cultural.
 The best-known attempt to build one is
 \href{https://en.wikipedia.org/wiki/Bloom's\_taxonomy}{Bloom's taxonomy},
 which was first published in 1956. More recent efforts are Wiggins and
-McTighe's \emph{facets of understanding} and Fink's taxonomy from his
-book
-\emph{\href{http://www.amazon.com/Creating-Significant-Learning-Experiences-Integrated/dp/1118124251/}{Creating
-Significant Learning Experiences}}. The table below compares them and
+McTighe's \emph{facets of understanding} \cite{bib:wiggins-mctighe} and Fink's taxonomy
+\cite{bib:fink-csle}. \tblref{tbl:bloom}
 shows some of the verbs typically used in learning objectives written
-for each level.
-(Reproduced with additions from \cite{bib:allen-tanner}.)
+for each of Bloom et al's original levels.
 
-\begin{tabular}{p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}p{0.25\textwidth}}
+\begin{tbllbl}{Bloom's Taxonomy}{tbl:bloom}
 
-\textbf{Bloom's taxonomy}
+\begin{enumerate}
+
+\item Knowledge: recalling learned information
+
+\item Comprehension: explaining the meaning of information
+
+\item Application: applying what one knows to novel, concrete situations
+
+\item Analysis: breaking down a whole into its component parts and explaining how each part contributes to the whole
+
+\item Synthesis: assembling components to form a new and integrated whole
+
+\item Evaluation: using evidence to make judgments about the relative merits of ideas and materials
+
+\end{enumerate}
+
+\end{tbllbl}
+
+\fixme{What needs to be in a good learning objective?}
+Here is an example of a successively-improved lesson objective:
+
+\begin{tabular}{ll}
+
+Learner will be given opportunities to learn good programming practices.
 &
-\textbf{Facets of understanding (Wiggins \& McTighe)}
-&
-\textbf{Taxonomy of significant learning (Fisk)}
-&
-\textbf{Typical learning objective verbs}
+Describes the lesson's content, not the attributes of successful students.
 \\
 
-\textbf{Knowledge}: recalling learned information
+Learner will have a better appreciation for good programming practices.
 &
-\textbf{Explain}: provide sophisticated and apt explanations and theories that provide knowledgeable and justified accounts of phenomena, facts, and data
-&
-\textbf{Foundational knowledge}: the facts, terms, formulas, concepts, principles, etc. that one understands and remembers
-&
-name, define, recall
+Doesn't start with an active verb or define the level of learning,
+and the subject of learning has no context and is not specific.
 \\
 
-\textbf{Comprehension}: explaining the meaning of information
+Learner will understand principles of good programming.
 &
-\textbf{Interpret}: interpretations, narratives, and translations that provide meaning; make subjects personal or accessible through images, anecdotes, analogies, and models
-&
-\textbf{Application}: using critical, creative, and practical (decision-making, problem-solving) skills
-&
-restate, locate, explain, recognize
+Starts with an active verb, but doesn't define the level of learning,
+and the subject of learning is still too vague for assessment.
 \\
 
-\textbf{Application}: applying what one knows to novel, concrete situations
+Learner will write one-page data analysis scripts for research purposes using R Studio.
 &
-\textbf{Apply}: ability to use and adapt what one knows to new situations and in various contexts
-&
-\textbf{Integration}: making connections among ideas, subjects, and people
-&
-apply, demonstrate, use
-\\
-
-\textbf{Analysis}: breaking down a whole into its component parts and explaining how each part contributes to the whole
-&
-\textbf{Have perspective}: critical and insightful points of view; see the big picture
-&
-\textbf{Human dimensions}: learning about and changing one's self; interacting with others
-&
-differentiate, criticize, compare
-\\
-
-\textbf{Synthesis}: assembling components to form a new and integrated whole
-&
-\textbf{Empathize}: ability to get inside another's feelings and perspectives; use prior indirect experience to perceive sensitively
-&
-\textbf{Caring}: identifying and changing one's feelings, values, and interests
-&
-design, construct, organize
-\\
-
-\textbf{Evaluation}: using evidence to make judgments about the relative merits of ideas and materials
-&
-\textbf{Have self-knowledge}: perceive how one's patterns or thought and action shape and impede one's own understanding
-&
-\textbf{Learning how to learn}: becoming a better, self-directed learner; learning to ask and answer questions
-&
-choose, rate, select
+Starts with an active verb, defines the level of learning,
+and provides context to ensure that outcomes can be assessed.
 \\
 
 \end{tabular}
-
-Here is an example of a successively-improved lesson objective:
-
-\begin{itemize}
-\item
-  \emph{Learner will be given opportunities to learn good programming practices.}
-  \\
-  Describes the lesson's content, not the attributes of successful students.
-\item
-  \emph{Learner will have a better appreciation for good programming practices.}
-  \\
-  Doesn't start with an active verb or define the level of learning,
-  and the subject of learning has no context and is not specific.
-\item
-  \emph{Learner will understand principles of good programming.}
-  \\
-  Starts with an active verb, but doesn't define the level of learning,
-  and the subject of learning is still too vague for assessment.
-\item
-  \emph{Learner will write one-page data analysis scripts for research purposes using R Studio.}
-  \\
-  Starts with an active verb, defines the level of learning,
-  and provides context to ensure that outcomes can be assessed.
-\end{itemize}
 
 Baume's guide to
 writing and using good learning outcomes \cite{bib:baume-fixme} is a good longer discussion of these
