--- a/performance.tex
+++ b/performance.tex
@@ -242,7 +242,7 @@ trying to improve your teaching. It's good to know what you do well!
 Sometimes it can be hard to receive feedback, especially negative
 feedback.
 
-\figlbl{fig/deathbulge-jerk.jpg}{Feedback Feelings}{fig:jerk}
+\figlbl{Feedback Feelings}{fig:jerk}{fig/deathbulge-jerk.jpg}
 
 Feedback is most effective when the people involved can share ground
 rules and expectations. This is especially important when the instructor
