--- a/book.tex
+++ b/book.tex
@@ -42,19 +42,34 @@
 \newenvironment{challenge}[2]{\begin{boxedsection}{Challenge}{#1}{#2} }{ \end{boxedsection}}
 \newenvironment{discussion}[2]{\begin{boxedsection}{Discussion}{#1}{#2} }{ \end{boxedsection}}
 
-\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\includegraphics[width={#1}]{#2}\label{#3}\caption{#4}\end{figure}}
-
 \newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
+
+\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\caption{#2}\label{#3}\includegraphics[width={#1}]{#4}\end{figure}}
+
+\newcommand{\fixme}[1]{\textbf{FIXME: {#1}}}
+
+\newcommand{\seclbl}[2]{\section{#1}\label{#2}}
+
+\newenvironment{tbllbl}[2]
+{\begin{table}\caption{#1}\label{#2}}
+{\end{table}}
+
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
 \newcommand{\href}[2]{#2\footnote{#1}}
-\newcommand{\seclbl}[2]{\section{#1}\label{#2}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
+\newcommand{\tblref}[1]{Table~\ref{#1}}
 
 \title{A Short Guide to Teaching}
 \date{}
 
+\linespread{1.3}
+
 \begin{document}
+
 \maketitle
+
+\newpage
+
 \tableofcontents
 
 \include{welcome}
