--- a/memory.tex
+++ b/memory.tex
@@ -149,20 +149,20 @@ for ch in "abc":
 
 The three key concepts used in this loop are:
 
-\figlbl{fig/for-loop-concepts.png}{Key Concepts}{fig:for-loop-concepts}
+\figlbl{Key Concepts}{fig:for-loop-concepts}{fig/for-loop-concepts.png}
 
 (In this case it's easy to connect the concepts to concrete elements in
 the program, but that may not always be the case.) The key
 relationships, which are as important as the concepts themselves, are:
 
-\figlbl{fig/for-loop-arcs.png}{Relationships}{fig:for-loop-arcs}
+\figlbl{Relationships}{fig:for-loop-arcs}{fig/for-loop-arcs.png}
 
 A quick count shows that there are actually 6 things here, not just 3,
 so we're already brushing up against the limits of short-term memory. If
 we add two more facts to show things that are usually (but not always)
 true:
 
-\figlbl{fig/for-loop-rec.png}{Recommendations}{fig:for-loop-rec}
+\figlbl{Recommendations}{fig:for-loop-rec}{fig/for-loop-rec.png}
 
 the count rises to 8, which is a good size for a single teaching
 episode. A few other concept maps drawn by previous participants in this
