--- a/terms.tex
+++ b/terms.tex
@@ -94,7 +94,7 @@ The things teachers know can be divided into:
   expansion are most common.
 \end{itemize}
 
-\figlbl{fig/pck.png}{Pedagogical Content Knowledge}{fig:pck}
+\figlbl{Pedagogical Content Knowledge}{fig:pck}{fig/pck.png}
 
 This training course focuses on general pedagogical knowledge through
 the two major categories (educational psychology and instructional
